--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -37,6 +38,7 @@
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.12",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
