--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.0",
+    "got": "^11.8.3",
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.12",
     "joi": "^17.6.0",
