--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "moduleNameMapper" : {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -87,6 +90,16 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+     "coveragePathIgnorePatterns": [
+      "node_modules",
+      ".entity.ts",
+      ".constants.ts",
+      ".dto.ts",
+      ".module.ts",
+      ".decorator.ts",
+      ".guard.ts"
+
+    ]
   }
 }
