--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "form-data": "^4.0.0",
     "got": "^11.8.3",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^8.2.12",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -46,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "typeorm": "^0.2.45",
     "uuid": "^8.3.2"
   },
